Revert "fixed caret being cutoff"
This reverts commit a9f794c175e84e6cb3d127f5ea9e753b12990a64.

--- a/frontend/src/styles/test.scss
+++ b/frontend/src/styles/test.scss
@@ -135,7 +135,7 @@
   align-content: flex-start;
   user-select: none;
   padding-bottom: 1em;
-  padding-top: 0.25em;
+  margin-top: 0.25em;
 
   .newline {
     width: inherit;
